--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^3.6.4",
     "react": "15.4.1",
     "react-native": "0.39.2",
     "react-redux": "^5.0.1",
